fixing layout issues with video

--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,9 @@ img{
   display:block;
   max-width: 100%;
 }
+video{
+  display: block;
+}
 
 /* Typography */
 
@@ -101,6 +104,14 @@ h3 {font-size: var(--fs-h3);}
   margin-bottom: 1em;
 }
 
+.section__subtitle--proj {
+  color: var(--clr-dark);
+  background: var(--clr-accent2);
+  font-family: var(--ff-primary);
+  font-weight: var(--fw-reg);
+  padding: .25em 1em;
+  margin-bottom:1em ;
+}
 
 
 /* intro */
@@ -164,25 +175,53 @@ h3 {font-size: var(--fs-h3);}
   width: 350px;
 }
 
+.section__subtitle--proj{
+  display: inline-block;
+}
+
 
 @media(min-width:600px){
-  .projects{
+
+  .section__title--proj {
+    display: block;
+  }
+
+  .section__subtitle--proj,
+  .section__description--proj,
+  .proj1__vid{
     display: grid;
     width: min-content;
     margin: 0 auto;
     grid-column-gap: 1em;
     grid-template-areas:
-      'vid title'
-      'vid subtitle';
-    grid-template-columns: min-content max-content ;
+      "title video"
+      "desc video";
+    grid-template-columns: min-content max-content;
+  }
+
+  .section__subtitle--proj{
+    align-self: start;
+    grid-column: -1 / 1;
+    grid-area: title;
+    text-align: left;
+    position: relative;
+    left: -1.5em;
+    width: calc(100% + 1.5em);
   }
 
   .proj1__vid{
-    height: 500px;
-    width: 390px;
-    grid-area: vid;
-    min-width: 250px;
     position: relative;
+    grid-area: video;
+    min-width: 250px;
+    z-index: 2;
+  }
+
+  .section__description--proj{
+    align-self: start;
+    position: relative;
+    grid-area: desc;
+    text-align: left;
+    grid-column: -1;
   }
 }
 
